docs(interview): deepen all 16 senior Java posts to genuine senior depth (OpenCode)